<resources>
    <string name="app_name">Gas Cost Calculator</string>
    <string name="mpg">Gas Mileage (Miles Per Gallon)</string>
    <string name="ppg">Gas Price (Dollar Per Gallon)</string>
    <string name="len">Trip Length (Miles)</string>
    <string name="cost_per_mile">Cost Per Mile:</string>
    <string name="total_cost">Total Cost:</string>
    <string name="eco_mode">Eco Mode</string>
    <string name="dollar">$ %.2f</string>
    <string name="just_double">%f</string>
    <string name="mpg0">$ 0.00</string>
</resources>
