<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <EditText
        android:id="@+id/et_mpg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="numberDecimal"
        android:hint="@string/mpg"/>
    <EditText
        android:id="@+id/et_ppg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="numberDecimal"
        android:hint="@string/ppg"/>
    <EditText
        android:id="@+id/et_len"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="numberDecimal"
        android:hint="@string/len"/>
</LinearLayout>