<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost_per_mile"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/tv_cpm"
            android:layout_width="match_parent"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_cost"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/tv_tc"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
    </LinearLayout>
   <CheckBox
       android:id="@+id/cb_eco"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/eco_mode"
       android:layout_margin="5dp"
       android:layout_gravity="end"/>
</LinearLayout>